# wasimoff

./: .dockerignore  .gitignore  .prettierignore  .prettierrc  Dockerfile  Makefile  README.md  buf.gen.yaml  deno.json  docker-compose.yaml  go.work.sum  version.sh
.devcontainer/: devcontainer.json
.github/workflows/: build-container.yaml
broker/: .gitignore  README.md  constants.go  go.mod  go.sum  main.go  nginx.conf.example  pprof.sh  version.go
broker/config/: configuration.go  load.go  version.go
broker/provider/: store.go  (+8 more)
client/: .gitignore  Makefile  README.md  client.go  client.py  client.sh  client_connecpy.py  client_pickled.py  client_pyodide.py  client_tsp.py  go.mod  go.sum  locust_workload.py
cloud-run/: .gcloudignore  .gitignore  invoke-tsp  package.json
denoprovider/: .dockerignore  README.md  README_cloudrun.md  cloudrun.ts  crosscompile.ts  deno.json  fs_denonative.ts  gcp-deploy.sh  main.ts  util.ts
gcloud-runner/: .gcloudignore  .gitignore  README.md  deno.json  gcloud_deploy.sh  gcloud_invoke_tsp.sh  main.ts  package.json  rollup.config.js  runwasi.js  tsconfig.json
proto/: go.mod
wasi-apps/: README.md
wasi-apps/argonload/: .gitignore  Cargo.toml  Makefile  README.md  argonload.wasm  index.html  measure_native.csv  measure_wasm.csv
wasi-apps/argonload/src/: main.rs
wasi-apps/gaussian_sleeper/: .gitignore  Cargo.toml  Makefile  gaussian_sleeper.wasm
wasi-apps/gaussian_sleeper/src/: main.rs
webprovider/: .gitignore  .yarnrc.yml  README.md  index.html  package.json  tsconfig.app.json  vite.config.ts  vite.revision-plugin.ts
(+164 files in other folders)
